--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "test": "vitest",
     "astro": "astro"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.8",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@vitest/ui": "^4.0.17",
+    "jsdom": "^27.4.0",
+    "vitest": "^4.0.17"
   }
 }
