--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "test": "vitest",
+    "lint:eslint": "eslint .",
     "astro": "astro"
   },
   "dependencies": {
@@ -15,7 +16,10 @@
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^8.23.0",
     "@vitest/ui": "^4.0.17",
+    "eslint": "^9.19.0",
+    "eslint-plugin-astro": "^1.3.1",
     "jsdom": "^27.4.0",
     "vitest": "^4.0.17"
   }
